--- a/piksi_tools/console/settings.yaml
+++ b/piksi_tools/console/settings.yaml
@@ -2242,7 +2242,7 @@
   readonly: false
   units: N/A
   Description: Enables or disables the Over-The-Air upgrade daemon's verbose output.
-  Notes: 'ota enabled' must be 'False' in order to change this setting.
+  Notes: The OTA daemon must be disabled in order to change this setting.
 
 - group: system
   name: ota_url
